--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-chessboard": "^4.7.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "site-xadrez": "file:",
     "stockfish": "^16.0.0",
     "web-vitals": "^2.1.4"
